--- a/PLAYSTATION 2/playstation 2.html
+++ b/PLAYSTATION 2/playstation 2.html
@@ -68,9 +68,9 @@
     </div>
     <header class="header2">
         <div">
-            <a type="button" class="navegador" href="../INICIO/index.html" class="nav-link">Inicio</a>
-            <a type="button" class="navegador" href="../PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
-            <a type="button" class="navegador" href="../PLAYSTATION 4-5/playstation4_1.html" class="nav-link">PS4-PS5</a>
+            <a type="button" class="navegador" href="/INICIO/index.html" class="nav-link">Inicio</a>
+            <a type="button" class="navegador" href="/PLAYSTATION 3/playstation 3_1.html" class="nav-link">PS3</a>
+            <a type="button" class="navegador" href="/PLAYSTATION 4-5/playstation4_1.html" class="nav-link">PS4-PS5</a>
         </div>
     </header>
 <h2 class="mas-vendidos">Sección de Playstation 2</h2>
@@ -168,9 +168,10 @@ function comprarJuegoPS2(nombreJuego) {
     </div>
 </footer>
 </body>
-<script src="../GLOBALE/btncarrito.js"></script>
-<script src="../GLOBALE/btn_flotante.js"></script>
-<script src="..//GLOBALE/comprar.js"></script>
-<script src="../GLOBALE/buscador-global.js"></script>
+<script src="/GLOBALE/btncarrito.js"></script>
+<script src="/GLOBALE/btn_flotante.js"></script>
+<script src="/GLOBALE/comprar.js"></script>
+<script src="/GLOBALE/buscador-global.js"></script>
+
 
 </html>
